test decompiled code